<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/actionbar_bg"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        >
        <TextView 
            android:id="@+id/txt_tab_news"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:padding="@dimen/list_padding"
    		android:textSize="@dimen/base_list_header_imgtitle_font_size"
    		android:text="@string/tab_news"
    		android:layout_weight="2"
    		android:gravity="center"
    		android:background="@drawable/tab_indicator_bg"
            />
        <View 
            android:id="@+id/txt_tab_split"
            android:layout_width="1dip"
    		android:layout_height="match_parent"
    		android:layout_marginTop="0.8dip"
    		android:layout_marginBottom="0.8dip"
    		android:layout_weight="0.25"
    		android:background="@drawable/tab_indicator_bg"
            />
         <TextView 
             android:id="@+id/txt_tab_image"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:padding="@dimen/list_padding"
    		android:textSize="@dimen/base_list_header_imgtitle_font_size"
    		android:text="@string/tab_image"
    		android:gravity="center"
    		android:layout_weight="2"
    		android:background="@drawable/tab_indicator_bg"
            />
         <View 
            android:layout_width="1dip"
    		android:layout_height="match_parent"
    		android:layout_marginTop="0.8dip"
    		android:layout_marginBottom="0.8dip"
    		android:layout_weight="0.25"
    		android:background="@drawable/tab_indicator_bg"
            />
          <TextView 
            android:id="@+id/txt_tab_report"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:padding="@dimen/list_padding"
    		android:textSize="@dimen/base_list_header_imgtitle_font_size"
    		android:text="@string/tab_report"
    		android:layout_weight="2"
    		android:gravity="center"
    		android:background="@drawable/tab_indicator_bg"
            />
          <View 
            android:layout_width="1dip"
    		android:layout_height="match_parent"
    		android:layout_marginTop="0.8dip"
    		android:layout_marginBottom="0.8dip"
    		android:layout_weight="0.25"
    		android:background="@drawable/tab_indicator_bg"
            />
           <TextView 
            android:id="@+id/txt_tab_figure"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:padding="@dimen/list_padding"
    		android:textSize="@dimen/base_list_header_imgtitle_font_size"
    		android:text="@string/tab_figure"
    		android:gravity="center"
    		android:layout_weight="2"
    		android:background="@drawable/tab_indicator_bg"
            />
           <View 
            android:layout_width="1dip"
    		android:layout_height="match_parent"
    		android:layout_marginTop="0.8dip"
    		android:layout_marginBottom="0.8dip"
    		android:layout_weight="0.25"
    		android:background="@drawable/tab_indicator_bg"
            />
            <TextView 
            android:id="@+id/txt_tab_technique"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:padding="@dimen/list_padding"
    		android:textSize="@dimen/base_list_header_imgtitle_font_size"
    		android:text="@string/tab_technique"
    		android:layout_weight="2"
    		android:gravity="center"
    		android:background="@drawable/tab_indicator_bg"
            />
    	</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="3dip"
		    android:background="@color/white"
		    >
    		<TextView 
    	    android:id="@+id/txt_tab_underline"
    	    android:layout_width="50dip"
    		android:layout_height="match_parent"
    		android:background="@color/blue"
    	    />
	</LinearLayout>
</LinearLayout>
