<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_bg"
        android:padding="8.0dip" >

        <TextView
            android:id="@+id/txt_actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/main_label" />

        <ImageView
            android:id="@+id/showRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_head" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_layout"
        android:background="@color/actionbar_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linear_main_tab_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/actionbar_bg"
             >

            <TextView
                android:id="@+id/txt_tab_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/tab_indicator_bg"
                android:gravity="center"
                android:layout_marginRight="1.0dip"
                android:padding="@dimen/list_padding"
                android:text="@string/tab_news"
                android:textColor="@color/black"
                android:textSize="@dimen/base_tab_font_size" />

            <TextView
                android:id="@+id/txt_tab_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/tab_indicator_bg"
                android:gravity="center"
                android:padding="@dimen/list_padding"
                android:text="@string/tab_image"
                android:textColor="@color/black"
                android:textSize="@dimen/base_tab_font_size" />

            <TextView
                android:id="@+id/txt_tab_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/tab_indicator_bg"
                android:gravity="center"
                android:padding="@dimen/list_padding"
                android:text="@string/tab_report"
                android:textColor="@color/black"
                android:textSize="@dimen/base_tab_font_size" />

            <TextView
                android:id="@+id/txt_tab_figure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/tab_indicator_bg"
                android:gravity="center"
                android:padding="@dimen/list_padding"
                android:text="@string/tab_figure"
                android:textColor="@color/black"
                android:textSize="@dimen/base_tab_font_size" />

            <TextView
                android:id="@+id/txt_tab_technique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/tab_indicator_bg"
                android:gravity="center"
                android:padding="@dimen/list_padding"
                android:text="@string/tab_technique"
                android:textColor="@color/black"
                android:textSize="@dimen/base_tab_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_main_tab_underline"
            android:layout_width="match_parent"
            android:layout_height="3dip" >

            <TextView
                android:id="@+id/txt_tab_underline"
                android:layout_width="50dip"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:background="@color/blue" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_tabs"
        android:padding="0dip" >

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
             >
        </android.support.v4.view.ViewPager>
    </RelativeLayout>

</RelativeLayout>