<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_dialog_font_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/share_dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/list_padding">

    <TextView
        android:id="@+id/txt_dialog_font_size_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dip"
        android:text="@string/font_size"
        android:textColor="@color/black"
        android:textSize="@dimen/dialog_sets_font_size_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:background="@drawable/ic_list_line_white" />

    <RelativeLayout
        android:id="@+id/rela_dialog_font_super"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip" >

        <TextView
            android:id="@+id/txt_dialog_font_super"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/font_size_super_big"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_sets_font_size" />

        <ImageView
            android:id="@+id/iv_dialog_font_super"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/font_size_super_big"
            android:scaleType="fitXY"
            android:src="@drawable/umeng_fb_tick_selected" 
            android:visibility="gone"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:background="@drawable/ic_list_line_white" />

    <RelativeLayout
        android:id="@+id/rela_dialog_font_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip" >

        <TextView
            android:id="@+id/txt_dialog_font_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/font_size_big"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_sets_font_size" />

        <ImageView
            android:id="@+id/iv_dialog_font_big"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/font_size_big"
            android:scaleType="fitXY"
            android:src="@drawable/umeng_fb_tick_selected" 
            android:visibility="gone"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:background="@drawable/ic_list_line_white" />

    <RelativeLayout
        android:id="@+id/rela_dialog_font_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip" >

        <TextView
            android:id="@+id/txt_dialog_font_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/font_size_mid"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_sets_font_size" />

        <ImageView
            android:id="@+id/iv_dialog_font_mid"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/font_size_mid"
            android:scaleType="fitXY"
            android:src="@drawable/umeng_fb_tick_selected" 
            android:visibility="gone"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:background="@drawable/ic_list_line_white" />

    <RelativeLayout
        android:id="@+id/rela_dialog_font_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip" >

        <TextView
            android:id="@+id/txt_dialog_font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/font_size_small"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_sets_font_size" />

        <ImageView
            android:id="@+id/iv_dialog_font_small"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/font_size_small"
            android:scaleType="fitXY"
            android:src="@drawable/umeng_fb_tick_selected" 
            android:visibility="gone"/>
    </RelativeLayout>

</LinearLayout>